--- a/CNN Cats & Dogs.ipynb
+++ b/CNN Cats & Dogs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -40,14 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1 - Convolution\n",
-    "# want to try (64,(3,3)) and input_shape = (128,128,3) afterwards,but it may take a long time to run\n",
     "classifier.add(Conv2D(64,(3,3), input_shape=(128,128,3), activation='relu'))"
    ]
   },
@@ -276,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing Bailey"
+    "# Testing my model"
    ]
   },
   {
